Added some basic un-marshalling as we will need specific processors to change and check the data. So basic reflection will not work we need specific handling. I need to figure out a way to have a base processor that will do almost all of the work and the specific processing is handled by the extending processor.

--- a/build.gradle
+++ b/build.gradle
@@ -44,6 +44,9 @@ dependencies {
     //jaxb
     compileOnly fileTree("${jaxbHome}")
 
+    //httpPost for jaxb class binding
+    compileOnly fileTree("${httpPostHome}")
+
     //nifi
     compile 'org.apache.nifi:nifi-api:1.11.3'
     compile 'org.apache.nifi:nifi-processor-utils:1.11.3'
