--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,4 @@
 narPluginVersion=0.3
 nifiHome=/home/brandon/Software/nifi/nifi
 jaxbHome=/home/brandon/Software/jaxb/
+httpPostHome=/home/brandon/Software/httpPostProject
