Seems to be in a solid state but need to do some provenance event handling and might not need to create a new flow file to keep the data provenance easy to follow just write the contents back in.

--- a/build.gradle
+++ b/build.gradle
@@ -41,11 +41,11 @@ repositories {
 
 //The dependencies of the actual code you are building not the buildscript itself
 dependencies {
-    //jaxb
-    compileOnly fileTree("${jaxbHome}")
+    //jaxb and attribute pojo for nifi
+    //all external nifi deps live here to make the
+    //processor run
+    compileOnly fileTree("${nifiDepHome}")
 
-    //httpPost for jaxb class binding
-    compileOnly fileTree("${httpPostHome}")
 
     //nifi
     compile 'org.apache.nifi:nifi-api:1.11.3'
