--- a/gradle.properties
+++ b/gradle.properties
@@ -1,3 +1,5 @@
 narPluginVersion=0.3
 nifiHome=/home/brandon/Software/nifi/nifi
+nifiExtensions=/home/brandon/Software/nifi/nifi/extensions
 nifiDepHome=/home/brandon/Software/nifidep
+fakeNexus="/home/brandon/Software/fakeNexus"
