--- a/gradle.properties
+++ b/gradle.properties
@@ -2,4 +2,4 @@ narPluginVersion=0.3
 nifiHome=/home/brandon/Software/nifi/nifi
 nifiExtensions=/home/brandon/Software/nifi/nifi/extensions
 nifiDepHome=/home/brandon/Software/nifidep
-fakeNexus="/home/brandon/Software/fakeNexus"
+fakeNexus=/home/brandon/Software/fakeNexus
